--- a/_utilities-default.scss
+++ b/_utilities-default.scss
@@ -76,6 +76,7 @@
 @include utility.position;
 @include utility.resize;
 @include utility.rotate;
+@include utility.row-gap;
 @include utility.scale;
 @include utility.skew;
 @include utility.stroke-width;
